# nlp_demo

./: .gitignore  experiments.csv  pyproject.toml
src/: data_handler.py  main.py  metrics.py  model_handler.py  rotten_tomatoes.py  train.py  trainer_callback.py
src/configs/: config.yaml
src/tasks/mistral/: config.yaml  data_handler.py  ultrachat.py
src/tasks/rotten_tomatoes/: config.yaml  data_handler.py
src/tasks/snli/: config.yaml  data_handler.py  metrics.py  snli.py
src/tasks/story_generate/: config.yaml  data_handler.py  metrics.py  wrting_prompt.py
src/tasks/summary/: cnn.py  config.yaml  data_handler.py  metrics.py
src/tasks/translate/: config.yaml  data_handler.py  metrics.py  opus.py
src/utils/: git.py
