# ==============================================================================
# Poetry 项目配置文件
# ------------------------------------------------------------------------------
# 本文件定义了项目的所有元数据、依赖项、构建系统和自定义包源。
# Poetry会读取此文件来管理您的开发环境和项目打包。
# ==============================================================================

[tool.poetry]
name = "hello-wsl"
version = "0.1.0"
description = "一个使用Transformers实现的简单文本分类项目。"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "hello_wsl"}]

# ==============================================================================
# 核心依赖 (项目运行所必需的包)
# ==============================================================================
[tool.poetry.dependencies]
python = ">=3.10,<3.12" # 限制Python版本，确保与Colab环境和库兼容性一致

# --- PyTorch GPU版本 (从指定的 "pytorch_cu121" 源安装) ---
torch = {version = "^2.3.1", source = "pytorch_cu121"}
torchvision = {version = "^0.18.1", source = "pytorch_cu121"}
torchaudio = {version = "^2.3.1", source = "pytorch_cu121"}

# --- Hugging Face 核心生态 ---
transformers = "^4.55.0"
accelerate = "^1.10.0"
datasets = "^4.0.0"
evaluate = "^0.4.6"       # HuggingFace的评估库

# --- [可暂不更新组] 通用数据科学库 ---
# 这些库的API相对稳定，向后兼容性好，可以暂时不更新。
scikit-learn = "^1.5.0"
pandas = "^2.2.2"
tensorboard = "^2.19.0"   # 更新到与新版PyTorch兼容的版本

# ==============================================================================
# 开发依赖 (仅在本地开发环境中使用)
# ==============================================================================
[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.3"     # 交互式开发环境
notebook = "^7.2.1"       # 经典的Jupyter Notebook
ruff = "^0.4.10"          # 高性能的代码检查和格式化工具 (可替代black, isort, flake8)
pytest = "^8.2.2"         # 代码测试框架

# ==============================================================================
# 构建系统配置 (通常无需修改)
# ==============================================================================
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ==============================================================================
# 自定义包源 (用于安装PyTorch GPU版本)
# ==============================================================================
[[tool.poetry.source]]
name = "pytorch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

